# com.shapeandshare.therowantree.server

./: .gitignore  .pylintrc  Dockerfile  README.md  build.sh  launch.py  launch.sh  python_event_template.json  requirements.frozen.txt  requirements.txt  rowantree.config  sacr.config  setup.cfg
.github/workflows/: pull-request.yml  python-publish.yml
app/: requirements.txt  server.py  therowantree.config
app/lib/: docker_config.py  personality.py  storyteller.py  therowantree_config.py
assets/: python_event_template.json
env/: .env.docker  .env.offline
src/rowantree/content/service/: server.py
src/rowantree/content/service/common/abstract/: abstract_loremaster.py  abstract_personality.py
src/rowantree/content/service/common/world/: storyteller.py
src/rowantree/content/service/utils/: log.py
src/rowantree/server/: server.py
src/rowantree/server/common/: abstract_personality.py  db_dao.py  global_personality.py  global_storyteller.py  personality.py  storyteller.py
src/rowantree/server/config/: docker.py  docker_config.py  server.py  therowantree_config.py
src/rowantree/server/db/: dao.py  utils.py
src/rowantree/server/lib/: personality.py  storyteller.py
test/integration/: setup.py
test/integration/rowantree/: test_main.py
