[metadata]
name = rowantree.server
version = 0.2.1
author = Joshua C. Burt
author_email = joshburt@shapeandshare.com
description = Rowan Tree Server
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requires = >=3.9
install_requires =
    pydantic >=1.9.0

package_dir =
    =src
packages = find_namespace:

[options.packages.find]
where = src
